# device_sdk

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: BuildDefaults.cmake
cmake/conf/: Glog.cmake  PackageConfigs.cmake  PrepareInstall.cmake
examples/logger/: CMakeLists.txt  main.cpp
